优化开始竞拍和结束竞拍